; ModuleID = '/home/carl/AnghaBench/FFmpeg/tests/extr_tiny_ssim.c_ssd_to_psnr.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tests/extr_tiny_ssim.c_ssd_to_psnr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i32, i32)* @ssd_to_psnr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @ssd_to_psnr(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = sitofp i32 %5 to double
  %7 = load i32, i32* %4, align 4
  %8 = mul nsw i32 %7, 255
  %9 = mul nsw i32 %8, 255
  %10 = sitofp i32 %9 to double
  %11 = fdiv double %6, %10
  %12 = fptosi double %11 to i32
  %13 = call i32 @log(i32 %12)
  %14 = mul nsw i32 -10, %13
  %15 = call i32 @log(i32 10)
  %16 = sdiv i32 %14, %15
  %17 = sitofp i32 %16 to double
  ret double %17
}

declare dso_local i32 @log(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
